UTOPIA-1583: Fix spacing before editor

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,6 @@
 .rt-container {
   width: 100%;
   padding: 0;
-  margin-top: -35px;
 }
 
 .rt-toolbar {
